# agentic_reviewer

./: .env.example  .gitignore  ACADEMIC_SEARCH_README.md  AGENTI_AVANZATI_README.md  AGENT_TOOLS_README.md  BDCC-3688583-peer-review-v1.textClipping  COMPARISON_GUIDE.md  CONFRONTO_PRIMA_DOPO.md  ESEMPIO_INTERATTIVO.md  ESEMPIO_OUTPUT_DIRECTORIES.md  FIX_TEMPERATURE_ERROR.md  FUNZIONALITA_AVANZATE.md  GAMMA_FIX_RIEPILOGO.md  GAMMA_INTEGRATION.md  GAMMA_QUICK_START.md  GENERIC_REVIEWER_README.md  GRADIO_ACADEMIC_SEARCH.md  GUI_MODE_README.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  INTEGRAZIONE_V3.md  LICENSE  MIGLIORAMENTI.md  MODALITA_INTERATTIVA.md  MODALITA_ITERATIVA_QUICK.md  MODALITA_ITERATIVA_README.md  MULTI_DOCUMENT_README.md  MULTI_DOCUMENT_UPLOAD.md  NOVITA_SISTEMA.md  NUOVE_FUNZIONALITA_v2.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_AGGIORNAMENTO.md  SISTEMA_3_TIER.md  SUMMARY_V3.md  TEMPERATURA_SPIEGAZIONE.md  TEST_ACCEPT_ALL.md  TEST_MULTI_UPLOAD.md  WEB_RESEARCH_README.md  (+37 more)
Lezione 2/: Covid.R  create_scatterplot.py
agentic/: __init__.py  __main__.py
agentic/agents/: __init__.py  base.py  specialists.py
agentic/orchestrator/: __init__.py  core.py
agentic/templates/: dashboard.html
agentic/utils/: __init__.py  classifier.py  ingest.py  llm.py  report.py
backend/: app.py  main_simple.py
examples/: README.md  contract.txt  invoice.txt  paper.txt
frontend/: ACCEPT_ALL_FEATURE.md  MULTI_DOCUMENT_UPLOAD.md  next.config.js  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentPerformance.tsx  DocumentViewer.tsx  EvidencePanel.tsx  FileUpload.tsx  IssuesList.tsx  LiveProgress.tsx  RedlineViewer.tsx  ReviewResults.tsx  RiskHeatmap.tsx  TrendsChart.tsx  (+1 more)
scripts/: auto_loop.py  load_env.py
tests/integration/: test_pipeline.py
tests/unit/: test_classifier.py  test_ingest.py  test_registry.py  test_report_html.py
(+2 files in other folders)
